<resources>
    <string name="app_name">Roomie</string>
    <string name="roomie_api_server_prod" translatable="false">https://prod-roomie-web.herokuapp.com/api/</string>
    <string name="roomie_api_server_staging" translatable="false">https://staging-roomie-web.herokuapp.com/api/</string>
    <string name="roomie_api_server_dev" translatable="false">https://dev-roomie-web.herokuapp.com/api/</string>
    <string name="roomie_api_server_local" translatable="false">http://10.0.2.1:8080/api/</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb235433017402895</string>
    <string name="facebook_app_id" translatable="false">235433017402895</string>
    <string name="default_web_client_id2" translatable="false">64621209556-l09m88enb8afsn04sbeb111shpoq1etf.apps.googleusercontent.com</string>
    <string name="profile_gender_age">Gender: %1$s\u0020\u0020\u0020\u0020Age: %2$s</string>
    <string name="profile_phone">Phone: %1$s</string>
    <string name="profile_city">City:</string>
    <string name="profile_bio">Personal information</string>
    <string name="profile_lifestyle">Lifestyle</string>
    <string name="profile_location">Location</string>
    <string name="enum_male">Male</string>
    <string name="enum_female">Female</string>
    <string name="enum_other">Other</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="phone">Phone number</string>
    <string name="button_save">Save</string>
    <string name="edit_bio">About me</string>
    <string name="edit_picture">Edit picture</string>
    <string name="back_button">Back button</string>
    <string name="validate_text_long">The text is too long</string>
    <string name="validate_text_short">The text is too short</string>
    <string name="validate_empty">This field can\'t be empty</string>
    <string name="validate_number_long">The number is too long</string>
    <string name="validate_number_short">The number is too long</string>
    <string name="update_success">Update success</string>
    <string name="profile_image">Profile image</string>
    <string name="email_profile">Email: %1$s</string>
    <string name="no_bio">This user has no biography :(</string>
    <string name="no_life">This user has no lifestyles assigned</string>
    <string name="email_in_use">Email already in use</string>
    <string name="succes_register">Welcome to Roomie, %1$s!</string>
    <string name="complete_title">Complete User Information</string>
    <string name="complete_user_btn">Complete user</string>
    <string name="complete_info">Welcome to Roomie! We need you to fill the following information so that we can complete your user. Thanks!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_login_with_facebook">Facebook</string>
    <string name="action_login_with_google">Google</string>
    <string name="action_login_with_facebook_long">Sign in with Facebook</string>
    <string name="action_login_with_google_long">Sign in with Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loginErrorMsg">Login error</string>
    <string name="recoverErrorMsg">Error recovering password</string>
    <string name="registerErrorMsg">Sign up error</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_up">Don\'t have an account?</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_password_not_match">Repeat password not match</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_description">Description (Optional)</string>
    <string name="prompt_number">Number (Optional)</string>
    <string name="action_save">Save</string>
    <string name="save_error">Save error</string>
    <string name="delete_error">Delete error</string>
    <string name="error_mandatory_field">Mandatory field</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="error_getting_items">Error getting items</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="sure_to_delete">Are you sure to delete?</string>
    <string name="dependency_load_error">Error getting resources</string>
    <string name="title_activity_account">Account</string>
    <string name="action_change">Change</string>
    <string name="change_password">Change password</string>
    <string name="promt_last_name">Last name</string>
    <string name="promt_first_name">First name</string>
    <string name="error_invalid_first_name">Invalid first name</string>
    <string name="error_invalid_last_name">Invalid last name</string>
    <string name="save_success">Save success</string>
    <string name="success_info">User Info Saved!</string>
    <string name="success">Success</string>
    <string name="my_account">My account</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="error_existing_email">This account is already registered</string>
    <string name="activate_account_first">Confirm your email first</string>
    <string name="action_recover">Send recovery link</string>
    <string name="title_activity_recover_password">Recover password</string>
    <string name="recover_password">Forgot your password? Type in your email and we will send a recovery link so you can reset your password</string>
    <string name="recover_password_success">We have sent you an email with password recovery instructions</string>
    <string name="ok">OK</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_notifications">Notifications</string>
    <string name="bottom_nav_account">Account</string>
    <string name="bottom_nav_menu">Menu</string>
    <string name="login_or">Or</string>
    <string name="todo_today">Today</string>
    <string name="todo_tomorrow">Tomorrow</string>
    <string name="todo_upcoming">Upcoming</string>
    <string name="todo_completed">Completed</string>
    <string name="todo_past_task">Undone past task</string>
    <string name="todo_past_save">Save</string>
    <string name="todo_new_title">New Task</string>
    <string name="todo_edit_title">Edit Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_choose_location">Map</string>
    <string name="sucess_title">Success!</string>
    <string name="check_email">Check your email for information on how to activate your account</string>
    <string name="return_login">Return to Login</string>
    <string name="register_title">Register</string>
    <string name="account_title">Account Information</string>
    <string name="confirm_pw">Confirm password</string>
    <string name="pw_restriction">*Password must be at least 8 characters long</string>
    <string name="personal_title">Personal Information</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="create_account_btn">Create Account</string>
    <string name="listing_title">Listings</string>
    <string name="new_listing">Create a new listing</string>
    <string name="select_listing">Select type of listing:</string>
    <string name="add_room_info">Cost Information</string>
    <string name="heading">Headline</string>
    <string name="headline_hint">Describe what you offer in a few words</string>
    <string name="deatailed_desc">Detailed description</string>
    <string name="room_desc_hint">Add a detailed description about the place and what you are looking for</string>
    <string name="rent">Rent amount</string>
    <string name="amount">Monthly rent</string>
    <string name="currency">Currency</string>
    <string name="move_in">Move-In Date</string>
    <string name="available_date">Available date</string>
    <string name="room_number">Number of rooms</string>
    <string name="room">Rooms</string>
    <string name="room_type">Type of place</string>
    <string name="spinner_room">Room</string>
    <string name="spinner_apt">Apartment</string>
    <string name="spinner_house">House</string>
    <string name="move_out">Move-Out Date</string>
    <string name="pictures">Pictures</string>
    <string name="basic_info">Basic Information</string>
    <string name="amenities">Amenities</string>
    <string name="restrictions">Restrictions</string>
    <string name="address_desc">Additional address description</string>
    <string name="address_desc_hint">Detail additional information for your address like signs, streets, house number, etc.</string>
    <string name="choose_location">Choose Location</string>
    <string name="copyright">© 2019 Cosmicode. All rights reserved.</string>
    <string name="no_results">This is embarrassing! We did not find any rooms with the current search filters. Please try again.</string>
    <string name="hint_phone">Add a phone number</string>
    <string name="hint_profile_desc">Add some details about yourself</string>
    <string name="search_filter_title">Search filters</string>
    <string name="serch_filter_desc">Please select the range of values you would like to select</string>
    <string name="notification_title">Notifications</string>
    <string name="premium_info_title">Premium Rooms</string>
    <string name="premium_info_desc">Create a premium room and obtain all the room administration features for you and all of your roommates! With a premium room you can obtain the following benefits:</string>
    <string name="no_ads_benefit">No Ads</string>
    <string name="room_admin_benefit">Room Administration Tools</string>
    <string name="share_benefit">Shared Benefits</string>
    <string name="no_ads_info">Remove all of those annoying advertisements</string>
    <string name="tools_info">Gain access to the expense split management, to do list, and event calendar.</string>
    <string name="shared_info">Invite your roommates and share all of the premium benefits!</string>
    <string name="upgrade_title">For Only:</string>
    <string name="premium_cost">$1.99</string>
    <string name="create_premium_button">Create a premium room</string>
    <string name="payment_info">Fill Payment Information</string>
    <string name="payment_desc">Fill out your payment information, we use a secure payment system via Stripe, we do not store any of your payment information in our database.</string>
    <string name="card_number">Card Number</string>
    <string name="expiration">Expiration Date</string>
    <string name="cvc">CVC</string>
    <string name="holder_name">Name On Card</string>
    <string name="btn_complete_payment">Complete Transaction</string>
    <string name="card_hint">XXXX XXXX XXXX XXXX</string>
    <string name="expire_hint">MM/YY</string>
    <string name="cvc_hint">XXX</string>
</resources>